front/src/css/text-input.css
.textinput-root {
    padding-left: 5px;
    padding-right: 5px;
    display: flex;
    height: 35px;
    justify-content: space-between;
    align-items: center;
    align-self: stretch;
    border-radius: 10px;
}

.textinput-root-focus {
    box-shadow: 0 0 10px 0 #2980B9;
}

.textinput-input{
    caret-color: #2980B9;
    color: #ECF0F1;
    border: none;
    background: none;
    width: 100%;
}

.textinput-input:focus{
    outline: none;
}

.textinput-button {
    cursor: not-allowed;

    white-space: nowrap;
    padding: 5px;
    align-items: center;
    border-radius: 10px;
    background: linear-gradient(0deg, #7F8C8D 0%, #7F8C8D 100%), #2ECC71;
    color: #ECF0F1;
    text-align: center;
    font-family: Kulim Park, serif;
    font-size: 12px;
    font-style: normal;
    font-weight: 600;
    line-height: normal;
}

.textinput-button-focus {
    background: #2ECC71;
    cursor: pointer;

}

